stripping out unused code from viz functions, few tweaks on notebooks

--- a/python/notebooks/01_BUG_paper_section_2.ipynb
+++ b/python/notebooks/01_BUG_paper_section_2.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# BUG: Beveridgean Unemployment Gap\n",
-    "This notebook demonstrates the python implementation of the \"Beveridgean Unemployment Gap\" by Pascal Michaillat and Emmanuel Saez. The original code was in MATLAB. See [GitHub link](https://github.com/pascalmichaillat/unemployment-gap) for original. \n",
+    "This series of notebooks demonstrate the python implementation of the \"Beveridgean Unemployment Gap\" by Pascal Michaillat and Emmanuel Saez. The original code was in MATLAB. See [GitHub link](https://github.com/pascalmichaillat/unemployment-gap) for original. \n",
     "\n",
-    "## Section 2: Beveridgean model of the labor market"
+    "## Paper Section 2: Beveridgean model of the labor market"
    ]
   },
   {
