--- a/python/notebooks/04_BUG_paper_section_5.ipynb
+++ b/python/notebooks/04_BUG_paper_section_5.ipynb
@@ -291,9 +291,9 @@
     "\n",
     "The Matlab implemtation takes a parameter 'epsilon,' which then determines the parameter for maximum number fo breaks (m) in the series. M&S set epsilon=0.15 (which then sets m=5), since that was recommended by B&P. \n",
     "\n",
-    "The python implementation in the ruptures packages takes a min_size parameter, which we set to min_size=41, since this is a result of the epsilon parameter (epsilon x series length). We also need to set jump=1 to allow the breakpoints to happen at any point, and not at multiples of jump (where the ruptures default jump is 2).\n",
+    "The python implementation in the *ruptures* packages takes a min\\_size parameter, which we set to `min_size=41`, since this is a result of the epsilon parameter (epsilon\\*series length). We also need to set `jump=1` to allow the breakpoints to happen at any point, and not at multiples of jump (where the ruptures default jump is 2).\n",
     "\n",
-    "We have set our default bug implementation to mimic the matlab, such that the breaks and coeffs returned should match the matlab."
+    "We have set our default bug implementation to mimic the matlab, such that, if run on the same series of data, the breaks and coeffs returned should match the matlab."
    ]
   },
   {
@@ -316,9 +316,14 @@
    "metadata": {},
    "source": [
     "### Get breakpoints\n",
-    "Our python function assumes the input series are the **log series** of u and v\n",
+    "Call the function `bug.get_bp_breakpoints()` with arguments:\n",
+    "  * **log** unemployment rate, required\n",
+    "  * **log** vacancy rate, required\n",
+    "  * `use_bp_defaults` optional, default is True\n",
+    "  * `min_size`, optional, default is None.  A valid parameter (int) to be used with *ruptures* `rpt.Dynp` algorithm. Must be specified if `use_bp_defaults=False`.\n",
+    "  * `n_bkps`, optional, default is None. A valid parameter (int). Must be specified if `use_bp_defaults=False`.\n",
     "\n",
-    "Returns: the estimated breakpoints and the estimated beveridge elasticity (the coeffs of the fitted linear model)"
+    "Returns: the estimated breakpoints"
    ]
   },
   {
@@ -403,7 +408,11 @@
    "metadata": {},
    "source": [
     "## Get Elasticity as a series \n",
-    "### (calls the breakpoint estimation internally)"
+    "### (calls the breakpoint estimation internally)\n",
+    "Call the function `bug.compute_beveridge_elasticity()` with arguments:\n",
+    "  * **log** unemployment rate, required\n",
+    "  * **log** vacancy rate, required\n",
+    "  * list of breakpoints, optional, deafult is None. If None, to get the necessary breakpoints, the `bug.get_bp_breakpoints()` function will be called under the hood with option `use_bp_defaults=True`."
    ]
   },
   {
@@ -482,9 +491,9 @@
     "\n",
     "We can find the exact same breakpoints as the matlab method, and from there we can fit a regression model to each sub-sequence. **We get the same fitted coefficients, why don't we get the same standard errors?** \n",
     "\n",
-    "Any regression model requires an assumption on the natrue of the errors. For time series like this, we want to allow for heteroskedasticy as well as autocorrelation in the error terms. The type of covaraince estimator we want is then a 'HAC.'\n",
+    "Any regression model requires an assumption on the nature of the errors. For time series like this, we want to allow for heteroskedasticy as well as autocorrelation in the error terms. The type of covaraince estimator we want is a 'HAC.'\n",
     "\n",
-    "Bai & Perron suggest using the HAC estimator from Andrews (1991), and this is the approach implementd in the matlab code. This was not the main focus of the work by M&S, so if they settled on using the B&P method for finding the breaks, then they simply also incorporated the B&P suggested defaults, which included Andrews HAC.\n",
+    "Bai & Perron suggest using the HAC estimator from Andrews (1991), and this is the approach implemented in the matlab code. This was not the main focus of the work by M&S, so if they settled on using the B&P method for finding the breaks, then they simply also incorporated the B&P suggested defaults, which included Andrews HAC.\n",
     "\n"
    ]
   },
@@ -493,11 +502,11 @@
    "id": "aa59766d",
    "metadata": {},
    "source": [
-    "Like M&S, we want to be judicious in leveraging exisitng methods for parameter estimation. In the package we use for OLS regression, the robust HAC method that is implemented is the Newey & West (1994) estimator. The Andrews HAC is not available. \n",
+    "Like M&S, we want to be judicious in leveraging exisitng methods for parameter estimation. In the package we use for OLS regression (python `statsmodels`), the robust HAC method that is implemented is the Newey & West (1994) estimator. The Andrews HAC is not available. \n",
     "\n",
     "See [Cheung and Lai (1997)](https://people.ucsc.edu/~cheung/WorkingPapers/BandWidthSelectionPowerPPTest_ET1997.pdf) for nice discussion of N-W vs Andrews HAC. \n",
     "\n",
-    "(Different kernels, different bandwidth estimation, etc.)"
+    "(TL/DR: Different kernels, different bandwidth estimation)"
    ]
   },
   {
@@ -591,10 +600,13 @@
     "ax = theta.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
     "eff_mar_tightness.plot(ax=ax,color='magenta', linewidth=2,label='Efficient')\n",
     "\n",
-    "plt.fill_between(theta.index, eff_mar_tightness, np.max((theta, eff_mar_tightness), axis=0),color='magenta', alpha=.2)\n",
-    "plt.fill_between(theta.index, eff_mar_tightness, np.min((theta, eff_mar_tightness), axis=0),color='navy', alpha=.2)\n",
+    "plt.fill_between(theta.index, eff_mar_tightness, \n",
+    "                 np.max((theta, eff_mar_tightness), axis=0),color='magenta', alpha=.2)\n",
+    "plt.fill_between(theta.index, eff_mar_tightness, \n",
+    "                 np.min((theta, eff_mar_tightness), axis=0),color='navy', alpha=.2)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=1)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
+    "                augment_legend=True, legend_loc=1)\n",
     "plt.ylim(0, 1.6)\n",
     "plt.ylabel('Labor Market Tightness', fontsize=12)\n",
     "plt.title('Labor Market Tightness', fontsize=14)\n"
@@ -606,7 +618,13 @@
    "metadata": {},
    "source": [
     "# FIGURE 7B\n",
-    "## Efficient unemployment rate"
+    "## Efficient unemployment rate\n",
+    "Call the function `bug.compute_efficient_unemployment()` with arguments:\n",
+    "  * unemployment rate, required\n",
+    "  * vacancy rate, required\n",
+    "  * Beveridge elasticity, required\n",
+    "  * value of non-work (zeta), optional; default is zeta=0.26\n",
+    "  * recruitment cost (kappa), optional; default is kappa=0.92"
    ]
   },
   {
@@ -629,10 +647,13 @@
     "ax = u_q.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
     "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient')\n",
     "\n",
-    "plt.fill_between(theta.index, eff_unempl, np.min((u_q, eff_unempl), axis=0),color='magenta', alpha=.2)\n",
-    "plt.fill_between(theta.index, eff_unempl, np.max((u_q, eff_unempl), axis=0),color='navy', alpha=.2)\n",
+    "plt.fill_between(theta.index, eff_unempl, \n",
+    "                 np.min((u_q, eff_unempl), axis=0),color='magenta', alpha=.2)\n",
+    "plt.fill_between(theta.index, eff_unempl, \n",
+    "                 np.max((u_q, eff_unempl), axis=0),color='navy', alpha=.2)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
+    "                augment_legend=True, legend_loc=4)\n",
     "plt.ylim(0, .12)\n",
     "\n",
     "plt.ylabel('Unemployment', fontsize=12)\n",
@@ -645,7 +666,13 @@
    "metadata": {},
    "source": [
     "# FIGURE 7C\n",
-    "## Unemployment gap"
+    "## Unemployment gap\n",
+    "Call the function `bug.compute_unemployment_gap()` with arguments:\n",
+    "  * unemployment rate, required\n",
+    "  * vacancy rate, required\n",
+    "  * Beveridge elasticity, required\n",
+    "  * value of non-work (zeta), optional; default is zeta=0.26\n",
+    "  * recruitment cost (kappa), optional; default is kappa=0.92"
    ]
   },
   {
@@ -672,7 +699,8 @@
     "plt.fill_between(unepl_gap.index, 0, [max(0,g) for g in unepl_gap],color='navy', alpha=.2)\n",
     "\n",
     "plt.ylim(-.02, .08)\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
+    "                augment_legend=True, legend_loc=2)\n",
     "plt.ylabel('Unemployment Gap', fontsize=12)\n",
     "plt.title('Unemployment Gap', fontsize=14)"
    ]
@@ -756,10 +784,15 @@
    "source": [
     "ax = eff_unempl.plot(figsize=(10, 7),color='magenta', linewidth=2,label='Efficient')\n",
     "nairu['NAIRU (percent)'].plot(color='darkorange', linewidth=2,label='NAIRU')\n",
-    "natural['Natural rate of unemployment (percent)'].plot(color='darkgreen', linestyle='dashed',linewidth=2,label='Natural')\n",
-    "trend['Trend of unemployment rate (percent)'].plot(color='k', linestyle='dotted',linewidth=2.5,label='Trend')\n",
+    "natural['Natural rate of unemployment (percent)'].plot(color='darkgreen', \n",
+    "                                                       linestyle='dashed',linewidth=2,\n",
+    "                                                       label='Natural')\n",
+    "trend['Trend of unemployment rate (percent)'].plot(color='k', \n",
+    "                                                   linestyle='dotted',linewidth=2.5,\n",
+    "                                                   label='Trend')\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
+    "                augment_legend=True, legend_loc=4)\n",
     "\n",
     "plt.ylim(0, .1)\n",
     "plt.title('Alternate Unemployment Rates', fontsize=14)\n"
