--- a/python/notebooks/05_BUG_paper_sec5-7_appE.ipynb
+++ b/python/notebooks/05_BUG_paper_sec5-7_appE.ipynb
@@ -162,7 +162,8 @@
    "metadata": {},
    "source": [
     "## Sec 5.7\n",
-    "### Matching elasticity"
+    "### Matching elasticity\n",
+    "Recall, `bug.compute_beveridge_elasticity()` function is expecting the **log** of the unemployment and vacancy rates series. "
    ]
   },
   {
@@ -244,8 +245,10 @@
    "outputs": [],
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa)\n",
-    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['UB'], zeta=zeta, kappa=kappa)\n",
-    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['LB'], zeta=zeta, kappa=kappa)\n"
+    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['UB'], zeta=zeta, \n",
+    "                                                   kappa=kappa)\n",
+    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['LB'], zeta=zeta, \n",
+    "                                                   kappa=kappa)\n"
    ]
   },
   {
@@ -270,7 +273,8 @@
     "eff_unempl_lb.plot(ax=ax,color='magenta',linestyle='dotted',  linewidth=2, label='_nolegend_')\n",
     "plt.fill_between(eff_unempl_lb.index, eff_unempl_lb, eff_unempl_ub, color='magenta', alpha=.2)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
+    "                augment_legend=True, legend_loc=4)\n",
     "\n",
     "plt.ylim(0, .12)\n",
     "plt.ylabel('Unemployment rate', fontsize=12)\n",
@@ -303,8 +307,10 @@
    "outputs": [],
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa)\n",
-    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[1], kappa=kappa)\n",
-    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[0], kappa=kappa)"
+    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[1], \n",
+    "                                                   kappa=kappa)\n",
+    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[0], \n",
+    "                                                   kappa=kappa)"
    ]
   },
   {
@@ -320,7 +326,8 @@
     "eff_unempl_lb.plot(ax=ax,color='magenta',linestyle='dotted',  linewidth=2, label='_nolegend_')\n",
     "plt.fill_between(eff_unempl_lb.index, eff_unempl_lb, eff_unempl_ub, color='magenta', alpha=.2)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=4)\n",
     "\n",
     "plt.ylim(0, .12)\n",
     "plt.ylabel('Unemployment rate', fontsize=12)\n",
@@ -353,8 +360,10 @@
    "outputs": [],
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa)\n",
-    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa_range[1])\n",
-    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa_range[0])"
+    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, \n",
+    "                                                   kappa=kappa_range[1])\n",
+    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, \n",
+    "                                                   kappa=kappa_range[0])"
    ]
   },
   {
@@ -370,7 +379,8 @@
     "eff_unempl_lb.plot(ax=ax,color='magenta',linestyle='dotted',  linewidth=2, label='_nolegend_')\n",
     "plt.fill_between(eff_unempl_lb.index, eff_unempl_lb, eff_unempl_ub, color='magenta', alpha=.2)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=4)\n",
     "\n",
     "plt.ylim(0, .12)\n",
     "plt.ylabel('Unemployment rate', fontsize=12)\n",
@@ -392,7 +402,11 @@
    "metadata": {},
    "source": [
     "# FIGURE 9A\n",
-    "### inverse-optimum Beveridge elasticity"
+    "### inverse-optimum Beveridge elasticity\n",
+    "Compute `bug.compute_beveridge_inverse()` with:\n",
+    "  * theta, required\n",
+    "  * zeta, optional, default zeta=0.26\n",
+    "  * kappa, optional, default kappa=0.92"
    ]
   },
   {
@@ -415,11 +429,14 @@
    "source": [
     "ax = e_star.plot(color='darkred', linewidth=2, figsize=(10, 7), label='Inverse Optimum')\n",
     "bev_e['E'].plot(ax=ax,color='blueviolet', linewidth=2,label='Bev Elasticity')\n",
-    "bev_e['UB'].plot(ax=ax,color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
-    "bev_e['LB'].plot(ax=ax,color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
+    "bev_e['UB'].plot(ax=ax,color='blueviolet', linestyle='dotted', linewidth=2, \n",
+    "                 label='_nolegend_')\n",
+    "bev_e['LB'].plot(ax=ax,color='blueviolet', linestyle='dotted', linewidth=2, \n",
+    "                 label='_nolegend_')\n",
     "plt.fill_between(bev_e['UB'].index, bev_e['LB'], bev_e['UB'], color='blueviolet', alpha=.3)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=2)\n",
     "\n",
     "plt.ylabel('Beveridge elasticity', fontsize=12)\n",
     "plt.title('Beveridge elasticity 95% CI', fontsize=14)"
@@ -431,7 +448,11 @@
    "metadata": {},
    "source": [
     "# FIGURE 9B\n",
-    "### inverse-optimum zeta value of non-work"
+    "### inverse-optimum zeta value of non-work\n",
+    "Compute `bug.compute_nonwork_inverse()` with:\n",
+    "  * theta, required\n",
+    "  * Beveridge elasticity, requried\n",
+    "  * kappa, optional, default kappa=0.92"
    ]
   },
   {
@@ -452,13 +473,16 @@
    "outputs": [],
    "source": [
     "ax = zeta_star.plot(color='darkred', linewidth=2, figsize=(10, 7), label='Inverse Optimum')\n",
-    "plt.axhline(zeta_range[0],color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
-    "plt.axhline(zeta_range[1],color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
+    "plt.axhline(zeta_range[0],color='blueviolet', linestyle='dotted', linewidth=2, \n",
+    "            label='_nolegend_')\n",
+    "plt.axhline(zeta_range[1],color='blueviolet', linestyle='dotted', linewidth=2, \n",
+    "            label='_nolegend_')\n",
     "plt.axhline(zeta,color='blueviolet', linewidth=2, label='value non-work')\n",
     "\n",
     "plt.fill_between(zeta_star.index, zeta_range[0], zeta_range[1], color='blueviolet', alpha=.3)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=4)\n",
     "\n",
     "plt.ylim(-.5, 1)\n",
     "plt.ylabel('Zeta', fontsize=12)\n",
@@ -471,7 +495,11 @@
    "metadata": {},
    "source": [
     "# FIGURE 9C\n",
-    "### inverse-optimum kappa"
+    "### inverse-optimum kappa\n",
+    "Compute `bug.compute_recruiting_inverse()` with:\n",
+    "  * theta, required\n",
+    "  * Beveridge elasticity, requried\n",
+    "  * zeta, optional, default zeta=0.26"
    ]
   },
   {
@@ -492,13 +520,17 @@
    "outputs": [],
    "source": [
     "ax = kappa_star.plot(color='darkred', linewidth=2, figsize=(10, 7), label='Inverse Optimum')\n",
-    "plt.axhline(kappa_range[0],color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
-    "plt.axhline(kappa_range[1],color='blueviolet', linestyle='dotted', linewidth=2, label='_nolegend_')\n",
+    "plt.axhline(kappa_range[0],color='blueviolet', linestyle='dotted', linewidth=2, \n",
+    "            label='_nolegend_')\n",
+    "plt.axhline(kappa_range[1],color='blueviolet', linestyle='dotted', linewidth=2, \n",
+    "            label='_nolegend_')\n",
     "plt.axhline(kappa,color='blueviolet', linewidth=2, label='Recruiting Cost')\n",
     "\n",
-    "plt.fill_between(kappa_star.index, kappa_range[0], kappa_range[1], color='blueviolet', alpha=.3)\n",
+    "plt.fill_between(kappa_star.index, kappa_range[0], kappa_range[1], color='blueviolet', \n",
+    "                 alpha=.3)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=2)\n",
     "\n",
     "plt.ylim(0, 6)\n",
     "plt.ylabel('kappa', fontsize=12)\n",
@@ -544,7 +576,8 @@
     "ax = u_HM.plot(color='magenta', linewidth=2, figsize=(9, 6), label='Efficent')\n",
     "u_q.plot(color='navy', linewidth=2,  label='Actual')\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=2)\n",
     "\n",
     "plt.ylim(0,.32)\n",
     "plt.ylabel('Unemployment', fontsize=12)\n",
@@ -569,8 +602,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labor_p = pd.read_excel('../../code/data.xlsx', sheet_name='Quarterly data',\n",
-    "                           header=1, usecols=['Real output per person (index)', 'Year', 'Quarter'],)\n",
+    "labor_p = pd.read_excel('../../code/data.xlsx', sheet_name='Quarterly data', header=1, \n",
+    "                           usecols=['Real output per person (index)', 'Year', 'Quarter'],)\n",
     "# set the index \n",
     "labor_p['date'] = labor_p['Year'].astype(str) +'-Q' + labor_p['Quarter'].astype(str)\n",
     "labor_p['date'] = pd.PeriodIndex(labor_p['date'], freq='Q')\n",
@@ -609,7 +642,8 @@
     "ax = labor_p.plot(linewidth=3, figsize=(9, 6),)\n",
     "np.exp(trend).plot(linewidth=1.5, color='red')\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=2)\n",
     "\n",
     "plt.ylim(0,120)\n",
     "plt.ylabel('Productivity Index', fontsize=12)\n",
@@ -633,7 +667,8 @@
    "source": [
     "ax = np.exp(cycle).plot(linewidth=2, color='purple',figsize=(9, 6),)\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=2)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=2)\n",
     "        \n",
     "plt.ylim(.94,1.06)\n",
     "plt.ylabel('Detrended Productivity Index', fontsize=12)\n",
@@ -679,7 +714,8 @@
     "ax = u_const.plot(linewidth=1.5, color='magenta',figsize=(9, 6),label='Const social value')\n",
     "u_fluct.plot(color='darkblue', linewidth=3, linestyle='dotted', label='Fluct social value')\n",
     "\n",
-    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, legend_loc=4)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, augment_legend=True, \n",
+    "                legend_loc=4)\n",
     "\n",
     "plt.ylim(0,.06)\n",
     "plt.ylabel('Unemployment', fontsize=12)\n",
