--- a/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
+++ b/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "## This key is an EXAMPLE ONLY!! \n",
     "# You will need to replace this with your actual registered key for the FRED API\n",
-    "my_key = 'abcdef1234567890abcdef'"
+    "my_key = 'abcdef1234567890abcdef'\n"
    ]
   },
   {
@@ -490,7 +490,7 @@
     "\n",
     "We *KNOW* there was a huge shock to the US (and world-wide) economy due to COVID at the 2020Q2 period. It's really not reasonable to say that the time (2011Q3 to 2020Q1) and (2020Q2 to 2022Q3) are the *SAME* regime. \n",
     "\n",
-    "The ONLY reason those 2 periods end up together is because of the default B-P parameterization, which does not allow a sequence as short as 10 time periods (the current post-COVID period).\n",
+    "The ONLY reason those 2 periods end up together is because of the default B-P parameterization, which does not allow a sequence as short as 11 time periods (the current post-COVID period as of the writing of this notebook).\n",
     "\n",
     "### Re-parameterize\n",
     "We are going to set the min sequence length as 10, and the number of breakpoints as 6, and see if this gives us Beveridge elasticity estimates with smaller CI.\n",
@@ -505,7 +505,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bkps_new = bug.get_bp_breakpoints(log_u_q, log_v_q, use_bp_defaults=False,n_bkps=6, min_size=10)\n",
+    "bkps_new = bug.get_bp_breakpoints(log_u_q, log_v_q, use_bp_defaults=False,n_bkps=6, \n",
+    "                                  min_size=10)\n",
     "bkps_new"
    ]
   },
@@ -513,7 +514,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b5d82134",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "bug.plot_beveridge_curve_segments(log_u_q, log_v_q, bkps_new,)"
@@ -578,7 +581,7 @@
     "### Note\n",
     "The main goal of this notebook was simply to show how to compute the BUG with new data.\n",
     "\n",
-    "We will return to the issue of breakpoint estimation in another notebook."
+    "We will return to the issue of breakpoint estimation in more depth in the next notebook."
    ]
   },
   {
