--- a/python/notebooks/07_More_on_Breakpoints_monthly_series.ipynb
+++ b/python/notebooks/07_More_on_Breakpoints_monthly_series.ipynb
@@ -110,7 +110,7 @@
    "source": [
     "## This key is an EXAMPLE ONLY!! \n",
     "# You will need to replace this with your actual registered key for the FRED API\n",
-    "my_key = 'abcdef1234567890abcdef'"
+    "my_key = 'abcdef1234567890abcdef'\n"
    ]
   },
   {
@@ -233,6 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the data into the format that the ruptures package likes\n",
     "signal = np.column_stack((np.array(log_v).reshape(-1, 1), np.vstack((log_u, np.ones(len(log_u)))).T))"
    ]
   },
@@ -281,6 +282,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dcef6ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = KneeLocator(np.arange(1,Eval.max_bkps +1), [x['F'] for x in Eval.f_stats_running[1:]], curve=\"concave\", direction=\"increasing\")\n",
+    "ax = k.plot_knee()\n",
+    "plt.title('F-test: null=m-1 breaks, alt=m breaks')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "786f4ad1",
    "metadata": {},
    "outputs": [],
@@ -319,7 +332,7 @@
    "id": "d2a591b5",
    "metadata": {},
    "source": [
-    "### The consensus seems to be 2 breakpoints"
+    "### The consensus seems to be 2 breakpoints!!"
    ]
   },
   {
@@ -351,7 +364,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bug.plot_beveridge_gap_series(gap_opt, [u.index[b] for b in opt[:-1]], recession_dates=[starts, ends], )\n",
+    "bug.plot_beveridge_gap_series(gap_opt, [u.index[b] for b in opt[:-1]], \n",
+    "                              recession_dates=[starts, ends], )\n",
     "plt.ylim(-.03,.13)"
    ]
   },
