--- a/python/notebooks/04_BUG_paper_section_5.ipynb
+++ b/python/notebooks/04_BUG_paper_section_5.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../bug')\n",
+    "sys.path.insert(0, '../')\n",
     "import bug"
    ]
   },
