--- a/python/notebooks/05_BUG_paper_sec5-7_appE.ipynb
+++ b/python/notebooks/05_BUG_paper_sec5-7_appE.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../bug')\n",
+    "sys.path.insert(0, '../')\n",
     "import bug"
    ]
   },
