--- a/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
+++ b/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../bug')\n",
+    "sys.path.insert(0, '../')\n",
     "import bug"
    ]
   },
