--- a/python/notebooks/07_More_on_Breakpoints_monthly_series.ipynb
+++ b/python/notebooks/07_More_on_Breakpoints_monthly_series.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../bug')\n",
+    "sys.path.insert(0, '../')\n",
     "import bug"
    ]
   },
