--- a/python/notebooks/08_Lots_More_on_Breakpoints.ipynb
+++ b/python/notebooks/08_Lots_More_on_Breakpoints.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../bug')\n",
+    "sys.path.insert(0, '../')\n",
     "import bug"
    ]
   },
