added functionality to calculate u-star as sqrt(uv)

--- a/python/notebooks/04_BUG_paper_section_5.ipynb
+++ b/python/notebooks/04_BUG_paper_section_5.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d524af8",
+   "id": "9182630a",
    "metadata": {},
    "source": [
     "# FIGURE 7B\n",
@@ -622,9 +622,10 @@
     "Call the function `bug.compute_efficient_unemployment()` with arguments:\n",
     "  * unemployment rate, required\n",
     "  * vacancy rate, required\n",
-    "  * Beveridge elasticity, required\n",
+    "  * Beveridge elasticity, required if use_sqrt_uv is False (default)\n",
     "  * value of non-work (zeta), optional; default is zeta=0.26\n",
-    "  * recruitment cost (kappa), optional; default is kappa=0.92"
+    "  * recruitment cost (kappa), optional; default is kappa=0.92\n",
+    "  * use_sqrt_uv, optional, default is False"
    ]
   },
   {
@@ -662,6 +663,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f79927a5",
+   "metadata": {},
+   "source": [
+    "## Efficient unemployment rate: sqrt(uv)\n",
+    "In [Michaillat & Saez, 2023](https://pascalmichaillat.org/13p.pdf), the authors propose another estimator for efficent unemployment, namely sqrt(uv). We have also implemented that version here for convenient comparison. \n",
+    "\n",
+    "Call the function `bug.compute_efficient_unemployment()` with arguments:\n",
+    "  * unemployment rate, required\n",
+    "  * vacancy rate, required\n",
+    "  * use_sqrt_uv = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c1b6f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqrt_uv = bug.compute_efficient_unemployment(u_q, v_q, use_sqrt_uv=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d9d643",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = u_q.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
+    "sqrt_uv.plot(ax=ax,color='teal', linewidth=2,label='Efficient: sqrt(uv)')\n",
+    "\n",
+    "plt.fill_between(theta.index, sqrt_uv, \n",
+    "                 np.min((u_q, sqrt_uv), axis=0),color='teal', alpha=.2)\n",
+    "plt.fill_between(theta.index, sqrt_uv, \n",
+    "                 np.max((u_q, sqrt_uv), axis=0),color='navy', alpha=.2)\n",
+    "\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
+    "                augment_legend=True, legend_loc=4)\n",
+    "plt.ylim(0, .12)\n",
+    "\n",
+    "plt.ylabel('Unemployment', fontsize=12)\n",
+    "plt.title('Unemployment', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "851b1eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = u_q.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
+    "sqrt_uv.plot(ax=ax,color='teal', linewidth=2,label='Efficient: sqrt(uv)')\n",
+    "\n",
+    "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient: Bev elas.')\n",
+    "\n",
+    "\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
+    "                augment_legend=True, legend_loc=4)\n",
+    "plt.ylim(0, .12)\n",
+    "\n",
+    "plt.ylabel('Unemployment', fontsize=12)\n",
+    "plt.title('Unemployment', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d1d2093a",
    "metadata": {},
    "source": [
@@ -670,9 +739,10 @@
     "Call the function `bug.compute_unemployment_gap()` with arguments:\n",
     "  * unemployment rate, required\n",
     "  * vacancy rate, required\n",
-    "  * Beveridge elasticity, required\n",
+    "  * Beveridge elasticity, required if use_sqrt_uv = False\n",
     "  * value of non-work (zeta), optional; default is zeta=0.26\n",
-    "  * recruitment cost (kappa), optional; default is kappa=0.92"
+    "  * recruitment cost (kappa), optional; default is kappa=0.92\n",
+    "  * use_sqrt_uv, optional, default is False"
    ]
   },
   {
@@ -703,6 +773,36 @@
     "                augment_legend=True, legend_loc=2)\n",
     "plt.ylabel('Unemployment Gap', fontsize=12)\n",
     "plt.title('Unemployment Gap', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9683921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unepl_gap_sqrt_uv = bug.compute_unemployment_gap(u_q, v_q, use_sqrt_uv=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5fba6f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = unepl_gap_sqrt_uv.plot(color='navy', linewidth=2, figsize=(10, 7), label='unemployment gap')\n",
+    "plt.axhline(y=0, color='teal', linewidth=2,)\n",
+    "\n",
+    "plt.fill_between(unepl_gap_sqrt_uv.index, 0, [min(0,g) for g in unepl_gap_sqrt_uv],color='teal', alpha=.2)\n",
+    "plt.fill_between(unepl_gap_sqrt_uv.index, 0, [max(0,g) for g in unepl_gap_sqrt_uv],color='navy', alpha=.2)\n",
+    "\n",
+    "plt.ylim(-.02, .08)\n",
+    "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
+    "                augment_legend=True, legend_loc=2)\n",
+    "plt.ylabel('Unemployment Gap', fontsize=12)\n",
+    "plt.title('Unemployment Gap, using sqrt(uv)', fontsize=14)"
    ]
   },
   {
@@ -782,7 +882,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = eff_unempl.plot(figsize=(10, 7),color='magenta', linewidth=2,label='Efficient')\n",
+    "ax = eff_unempl.plot(figsize=(10, 7),color='magenta', linewidth=2,label='Efficient: Bev elas.')\n",
+    "sqrt_uv.plot(color='teal', linewidth=2, label='Efficient: sqrt(uv)')\n",
     "nairu['NAIRU (percent)'].plot(color='darkorange', linewidth=2,label='NAIRU')\n",
     "natural['Natural rate of unemployment (percent)'].plot(color='darkgreen', \n",
     "                                                       linestyle='dashed',linewidth=2,\n",
@@ -792,11 +893,19 @@
     "                                                   label='Trend')\n",
     "\n",
     "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
-    "                augment_legend=True, legend_loc=4)\n",
+    "                augment_legend=True, legend_loc=0)\n",
     "\n",
-    "plt.ylim(0, .1)\n",
+    "plt.ylim(0, .11)\n",
     "plt.title('Alternate Unemployment Rates', fontsize=14)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "029073af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -815,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
