small edits in discussion

--- a/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
+++ b/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "## This key is an EXAMPLE ONLY!! \n",
     "# You will need to replace this with your actual registered key for the FRED API\n",
-    "my_key = 'abcdef1234567890abcdef'\n"
+    "my_key = 'abcdef1234567890abcdef'"
    ]
   },
   {
@@ -425,7 +425,10 @@
    "metadata": {},
    "source": [
     "### The new data\n",
-    "OK, so what happens when we use the default B-P parameter values on our longer series 1951Q1 to 2022Q3 (length=287)?"
+    "OK, so what happens when we use the default B-P parameter values on our longer series 1951Q1 to the present quarter, FY2023 or later ?\n",
+    "\n",
+    "#### Can't find more than 5 internal breakpoints\n",
+    "Which means the post-COVID era gets lumped in with the curve starting around 2009--2011 (depends on the dat ayou are fitting), and that seems _wrong_."
    ]
   },
   {
@@ -486,11 +489,11 @@
    "metadata": {},
    "source": [
     "#### Discussion\n",
-    "So we see in the graph above, that the last period, from 2011Q3 to 2022Q3 has a really wide confidence interval. (In fact, the average std. error across all segments is 0.097.) This is because the model breakpoints are likely mis-specified. \n",
+    "So we see in the graph above, that the last period, from 2011Q3 to the end-point has a really wide confidence interval. (In fact, the average std. error across all segments is 0.097.) This is because the model breakpoints are likely mis-specified. \n",
     "\n",
-    "We *KNOW* there was a huge shock to the US (and world-wide) economy due to COVID at the 2020Q2 period. It's really not reasonable to say that the time (2011Q3 to 2020Q1) and (2020Q2 to 2022Q3) are the *SAME* regime. \n",
+    "We *KNOW* there was a huge shock to the US (and world-wide) economy due to COVID at the 2020Q2 period. It's really not reasonable to say that the time (2011Q3 to 2020Q1) and (2020Q2 to present quarter) are the *SAME* regime. \n",
     "\n",
-    "The ONLY reason those 2 periods end up together is because of the default B-P parameterization, which does not allow a sequence as short as 11 time periods (the current post-COVID period as of the writing of this notebook).\n",
+    "The ONLY reason those 2 periods end up together is because of the default B-P parameterization, which does not allow a sequence short enough to distinguish the post-COVID time period.\n",
     "\n",
     "### Re-parameterize\n",
     "We are going to set the min sequence length as 10, and the number of breakpoints as 6, and see if this gives us Beveridge elasticity estimates with smaller CI.\n",
@@ -609,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
