small edits in discussion

--- a/python/notebooks/08_Lots_More_on_Breakpoints.ipynb
+++ b/python/notebooks/08_Lots_More_on_Breakpoints.ipynb
@@ -104,7 +104,8 @@
    "source": [
     "## This key is an EXAMPLE ONLY!! \n",
     "# You will need to replace this with your actual registered key for the FRED API\n",
-    "my_key = 'abcdef1234567890abcdef'"
+    "my_key = 'abcdef1234567890abcdef'\n",
+    "my_key = 'ad6e20b7a328d09ddd3917b5f43ce3fa'"
    ]
   },
   {
@@ -309,7 +310,7 @@
     "\n",
     "Recall the breakpoints from the M&S paper were [0, 41, 84, 153, 194, 235, 276].\n",
     "\n",
-    "Note that was 5 breakpoints for the period 1951--2019, whereas we now are looking at 6 breakpoints for 1951--2022.\n",
+    "Note that was 5 breakpoints for the period 1951--2019, whereas we now are looking at 6 breakpoints for 1951--current year.\n",
     "\n",
     "#### Timing tests\n",
     "To run timing tests, uncomment the lines with the %timeit magic"
@@ -736,7 +737,7 @@
    "outputs": [],
    "source": [
     "# using the knee found on LWZ\n",
-    "chosen_k = 7#k.knee\n",
+    "chosen_k = k.knee\n",
     "opt = Eval.bkps[chosen_k]\n",
     "opt"
    ]
@@ -839,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
