--- a/python/notebooks/08_Lots_More_on_Breakpoints.ipynb
+++ b/python/notebooks/08_Lots_More_on_Breakpoints.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "## This key is an EXAMPLE ONLY!! \n",
     "# You will need to replace this with your actual registered key for the FRED API\n",
-    "my_key = 'abcdef1234567890abcdef'\n",
+    "my_key = 'abcdef1234567890abcdef'"
    ]
   },
   {
